--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-/* Filename - App.css*/
-
-.App {
+Filename - App.css .App {
   max-height: 100vh;
   width: 100%;
   overflow-y: hidden;
@@ -24,8 +22,9 @@
   display: flex;
   flex-direction: column;
   background-color: #242424;
-  border-left: 3px solid #1f65e6;
-  padding: 5px;
+  border-left: 5px solid #445560;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .input-box {
@@ -66,7 +65,7 @@
   font-size: 22px;
   font-weight: bold;
   color: white;
-  background-color: #1f65e6;
+  background-color: #668ba4;
   border: none;
   border-radius: 4px;
   transition: 0.3s;
@@ -79,7 +78,8 @@
 }
 
 h4 {
-  color: #afec3f;
+  /* color: #afec3f; */
+  color: #97cba9;
 }
 
 #code-inp {
@@ -104,7 +104,7 @@ h4 {
   height: 40px;
   font-size: 22px;
   font-weight: bold;
-  background-color: #afec3f;
+  background-color: #d1d49d;
   border: none;
   border-radius: 4px;
   transition: 0.3s;
@@ -112,5 +112,5 @@ h4 {
 }
 
 .run-btn:active {
-  background-color: #6e9427;
+  background-color: #abe839;
 }
